--- a/native_api_1c/Cargo.toml
+++ b/native_api_1c/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "native_api_1c"
-version = "0.10.7"
+version = "0.11.0-beta.1"
 edition = "2021"
 repository = "https://github.com/Sebekerga/native_api_1c"
 license = "MIT"
