update dependencies in Cargo.toml to remove version constraints and add new entries in .gitignore

--- a/native_api_1c/Cargo.toml
+++ b/native_api_1c/Cargo.toml
@@ -8,8 +8,8 @@ description = "Main library for Native API 1C"
 readme = "../README.md"
 
 [dependencies]
-native_api_1c_core = { version = "=0.9.3", path = "../native_api_1c_core" }
-native_api_1c_macro = { version = "=0.10.4", path = "../native_api_1c_macro" }
+native_api_1c_core = { path = "../native_api_1c_core" }
+native_api_1c_macro = { path = "../native_api_1c_macro" }
 
 [features]
 default = ["macro"]
